--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -193,6 +193,7 @@
             <li><a [routerLink]="['falcon-crm-newContact']">New Contact</a></li>
             <li><a [routerLink]="['profile-settings']">Profile Settings</a></li>
             <li><a [routerLink]="['falcon-app-chat-app']">Chatt</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-productDetails-CINCO_CINCO']">Product-Details CINCO</a></li>
 
         </div>
     </div>
